@@ -4,7 +4,7 @@
     <parent>
         <groupId>nl.b3p</groupId>
         <artifactId>brmo</artifactId>
-        <version>3.0.1-SNAPSHOT</version>
+        <version>3.0.2-SNAPSHOT</version>
     </parent>
     <artifactId>brmo-service</artifactId>
     <packaging>war</packaging>
@@ -272,9 +272,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <compilerArguments>
-                        <endorseddirs>${endorsed.dir}</endorseddirs>
-                    </compilerArguments>
+                    <compilerArgument>-Djava.endorsed.dirs=${endorsed.dir}</compilerArgument>
                 </configuration>
             </plugin>
             <plugin>
